syntax = "proto3";

package com.meeting;

option java_package = "com.meeting";
option java_outer_classname = "UserCalendarProto";
option java_multiple_files = true;

import "service/calendar/calendar_event.proto";
import "google/type/datetime.proto";

service UserCalendarService {

  rpc GetUserCalendar(ProtoUserCalendarRequest) returns (ProtoUserCalendarResponse);

}

message ProtoUserCalendarRequest {
  uint32 org_id = 1;
  repeated string calendar_id = 2;

  // DateTime is used to maintain consistency, only the date part will be used
  google.type.DateTime start_date = 3;
  uint32 fetch_days_before = 4;
  uint32 fetch_days_after = 5;
}
